--- a/app/src/main/res/layout/fragment_exchange.xml
+++ b/app/src/main/res/layout/fragment_exchange.xml
@@ -7,11 +7,11 @@
 
         <variable
             name="viewModel"
-            type="com.example.exchange.exchange.ExchangeViewModel" />
+            type="com.example.exchange.ui.exchange.ExchangeViewModel" />
 
         <import type="com.example.exchange.data.Currency"  />
 
-        <import type="com.example.exchange.exchange.ExchangeBinding" />
+        <import type="com.example.exchange.ui.exchange.ExchangeBinding" />
 
         <import type="androidx.core.content.ContextCompat" />
 
@@ -236,7 +236,7 @@
             android:textAppearance="@style/TextAppearance.Exchange.Overline"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/receive_divider"
-            tools:text="EXCHANGE FEE: 0.5%"/>
+            tools:text="Swap FEE: 0.5%"/>
 
         <Button
             android:id="@+id/submit"
@@ -252,22 +252,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/exchange_fee" />
-
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
-            android:gravity="center"
-            android:text="@string/exchange_msg_byArrowsome"
-            android:textAppearance="@style/TextAppearance.Exchange.Overline"
-            android:textStyle="italic"
-            android:textColor="@android:color/holo_green_dark"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/submit" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
